# sigenmax2870

./: .gitignore  COPYING  ChangeLog  Makefile.am  README  README.md  configure.ac  copyright  images  makefile.dist
doc/: sigenmax2870.1
gui/macOs_arm/: prepare.sh
gui/macOs_x86-64/: prepare.sh
include/: anyexcept.hpp  checkendianess.hpp  parseCmdLine.hpp  safeconversion.hpp  sigenmax2870.hpp
src/: Makefile.am  checkendianess.cpp  parseCmdLine.cpp  sigenmax2870.cpp  sigenmax2870_utils.cpp
